--- a/assets/dev/scss/editor/panel/_panel.scss
+++ b/assets/dev/scss/editor/panel/_panel.scss
@@ -3,15 +3,15 @@
 //
 
 .qazana-panel {
-    font-family: $editor-font;
-    font-size: 13px;
-    line-height: 1.5;
-    color: $editor-darker;
+  font-family: $editor-font;
+  font-size: 13px;
+  line-height: 1.5;
+  color: $editor-darker;
 
-    // Controls
-    @import "reset";
-    // Base
-
+  // Controls
+  @import 'reset';
+  // Base
+  &#qazana-panel {
     background-color: $editor-background;
     position: fixed;
     width: 280px;
@@ -19,65 +19,73 @@
     top: 0;
     bottom: 0;
     overflow: visible;
-    @media (max-width: $screen-lg-max) {
-        width: $panel-width;
-    }
-    @media (min-width: $screen-xl-min) {
-        width: $panel-xl-width;
-    }
+  }
+  @media (max-width: $screen-lg-max) {
+    width: $panel-width;
+  }
+  @media (min-width: $screen-xl-min) {
+    width: $panel-xl-width;
+  }
 
-     > .ui-resizable-w,
-    > .ui-resizable-e {
-        position: absolute;
-        top: 0;
-        height: 100%;
-        width: 7px;
-        @include end(-5px);
-        cursor: ew-resize;
-    }
+   > .ui-resizable-w,
+   > .ui-resizable-e {
+    position: absolute;
+    top: 0;
+    height: 100%;
+    width: 7px;
+    @include end(-5px);
+    cursor: ew-resize;
+  }
 
-    #qazana-panel-inner {
-        position: relative;
-        height: 100%;
-        box-shadow: 0 0 5px 0 rgba(0,0,0,0.2);
-    }
+  #qazana-panel-inner {
+    position: relative;
+    height: 100%;
+    box-shadow: 0 0 5px 0 rgba(0,0,0,.2);
+  }
 
-    .qazana-panel-container {
-        clear: both;
-        padding-left: 15px;
-        padding-right: 15px;
-    }
-    // Global
-    @import "global";
-    // Header
-    @import "header";
-    // Elements
-    @import "elements";
-    // Categories
-    @import "categories";
-    // Schemes
-    @import "schemes";
-    // Main Panel
-    #qazana-panel-content-wrapper {
-        position: absolute;
-        bottom: 40px;
-        top: 100px;
-        left: 0;
-        width: 100%;
-    }
+  .qazana-panel-container {
+    clear: both;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 
-    // Menu
-    @import "menu";
-    // Element Edit
-    @import "element-settings";
-    // Controls
-    @import "control";
-    // Color Picker
-    @import "color-picker";
-    //Footer
-    @import "footer";
+  // Main Panel
+  #qazana-panel-content-wrapper {
+    position: absolute;
+    bottom: 40px;
+    top: 100px;
+    left: 0;
+    width: 100%;
+  }
 
-    .qazana-panel-hide {
-        display: none;
-    }
+  .qazana-panel-hide {
+    display: none;
+  }
+
+  // Global
+  @import 'global';
+
+  // Header
+  @import 'header';
+  // Elements
+  @import 'elements';
+  // Categories
+  @import 'categories';
+  // Schemes
+  @import 'schemes';
+
+  // Menu
+  @import 'menu';
+
+  // Element Edit
+  @import 'element-settings';
+
+  // Controls
+  @import 'control';
+
+  // Color Picker
+  @import 'color-picker';
+
+  //Footer
+  @import 'footer';
 }
