--- a/assets/css/frontend-rtl.css
+++ b/assets/css/frontend-rtl.css
@@ -13,8 +13,7 @@
   position: absolute;
   border-radius: 3px;
   -webkit-box-shadow: 2px 8px 23px 3px rgba(0, 0, 0, 0.2);
-          box-shadow: 2px 8px 23px 3px rgba(0, 0, 0, 0.2);
-  overflow: hidden; }
+          box-shadow: 2px 8px 23px 3px rgba(0, 0, 0, 0.2); }
 
 .dialog-widget-header, .dialog-message {
   text-align: center; }
@@ -87,8 +86,7 @@
     opacity: 1; }
 
 .qazana-video-wrapper {
-  position: relative;
-  height: 0; }
+  position: relative; }
   .qazana-video-wrapper iframe {
     position: absolute;
     top: 0;
