--- a/assets/lib/eicons/css/icons.css
+++ b/assets/lib/eicons/css/icons.css
@@ -1,13 +1,14 @@
 @font-face {
-  font-family: 'eicon';
-  src: url("../fonts/eicons.eot?1.9");
-  src: url("../fonts/eicons.eot?1.9#iefix") format("embedded-opentype"), url("../fonts/eicons.woff2?1.9") format("woff2"), url("../fonts/eicons.woff?1.9") format("woff"), url("../fonts/eicons.ttf?1.9") format("truetype"), url("../fonts/eicons.svg?1.9#eicon") format("svg");
+  font-family: 'eicons';
+  src: url("../fonts/eicons.eot?2.2");
+  src: url("../fonts/eicons.eot?2.2#iefix") format("embedded-opentype"), url("../fonts/eicons.woff2?2.2") format("woff2"), url("../fonts/eicons.woff?2.2") format("woff"), url("../fonts/eicons.ttf?2.2") format("truetype"), url("../fonts/eicons.svg?2.2#eicon") format("svg");
   font-weight: normal;
   font-style: normal; }
+
 [class^="eicon-"],
 [class*=" eicon-"] {
   display: inline-block;
-  font-family: eicon;
+  font-family: eicons;
   font-size: inherit;
   font-weight: normal;
   font-style: normal;
@@ -401,4 +402,47 @@
 .eicon-v-align-stretch:before {
   content: '\e928'; }
 
-/*# sourceMappingURL=qazana-icons.css.map */
+.eicon-pro-icon:before {
+  content: '\e929'; }
+
+.eicon-mail:before {
+  content: '\e930'; }
+
+.eicon-lock-user:before {
+  content: '\e931'; }
+
+.eicon-testimonial-carousel:before {
+  content: '\e932'; }
+
+.eicon-media-carousel:before {
+  content: '\e933'; }
+
+.eicon-section:before {
+  content: '\e934'; }
+
+.eicon-column:before {
+  content: '\e935'; }
+
+.eicon-edit:before {
+  content: '\e936'; }
+
+.eicon-clone:before {
+  content: '\e937'; }
+
+.eicon-trash:before {
+  content: '\e938'; }
+
+.eicon-play:before {
+  content: '\e939'; }
+
+.eicon-angle-right:before {
+  content: '\e940'; }
+
+.eicon-angle-left:before {
+  content: '\e941'; }
+
+.eicon-floppy-o:before {
+  content: '\e001'; }
+
+.eicon-times:before {
+  content: '\e002'; }
