--- a/assets/dev/scss/editor/panel/_control.scss
+++ b/assets/dev/scss/editor/panel/_control.scss
@@ -972,6 +972,8 @@
 // Box-shadow control
 @import 'controls/box-shadow';
 
+@import "controls/text-shadow";
+
 // Switcher control
 @import 'controls/switcher';
 
