--- a/assets/dev/scss/editor/_templates-modal.scss
+++ b/assets/dev/scss/editor/_templates-modal.scss
@@ -461,10 +461,15 @@
   background-color: #ffffff;
   color: $editor-light;
   font-weight: 300;
-  line-height: 44px;
-
+  padding: 16px 20px;
+  border: 1px solid #e8e8e8;
   &:focus {
     border: 1px solid $editor-background;
+  }
+
+  input[type="button" i] {
+      margin-top: 2px;
+      margin-left: -6px;
   }
 }
 
