--- a/assets/dev/scss/frontend/_widgets.scss
+++ b/assets/dev/scss/frontend/_widgets.scss
@@ -1,27 +1,29 @@
 //
 // Widgets
 //
-@import "widgets/heading";
-@import "widgets/image";
-@import "widgets/gallery";
-@import "widgets/button";
-@import "widgets/divider";
-@import "widgets/image-gallery";
-@import "widgets/counter";
-@import "widgets/piechart";
-@import "widgets/alert";
-@import "widgets/progress";
-@import "widgets/tabs";
 @import "widgets/accordion";
-@import "widgets/toggle";
-@import "widgets/icon";
-@import "widgets/icon-list";
-@import "widgets/video";
-@import "widgets/image-carousel";
-@import "widgets/image-box";
+@import "widgets/alert";
+@import "widgets/button";
+@import "widgets/counter";
+@import "widgets/divider";
+@import "widgets/gallery";
+@import "widgets/heading";
 @import "widgets/icon-box";
-@import "widgets/testimonial";
-@import "widgets/social-icons";
+@import "widgets/icon-list";
+@import "widgets/icon";
+@import "widgets/image-box";
+@import "widgets/image-carousel";
+@import "widgets/image-gallery";
+@import "widgets/image";
+@import "widgets/link";
 @import "widgets/menu-anchor";
+@import "widgets/piechart";
+@import "widgets/progress";
 @import "widgets/slick/posts-slider-biggie";
 @import "widgets/slick/posts-slider-small";
+@import "widgets/social-icons";
+@import "widgets/tabs";
+@import "widgets/testimonial";
+@import "widgets/toggle";
+@import "widgets/tooltip";
+@import "widgets/video";
