--- a/assets/css/frontend-rtl.css
+++ b/assets/css/frontend-rtl.css
@@ -1312,23 +1312,37 @@
 .qazana-widget-image .qazana-image.qazana-image-shape-circle {
   border-radius: 50%; }
 
-.qazana-link .qazana-link-content-wrapper {
+.qazana-link {
   -webkit-transition: all 0.5s;
   transition: all 0.5s; }
-.qazana-link .qazana-align-icon-right {
-  margin-left: 5px; }
-.qazana-link .qazana-align-icon-left {
-  margin-right: 5px; }
+  .qazana-link .qazana-link-wrapper {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    position: relative;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+  .qazana-link.qazana-align-icon-right .qazana-link-wrapper {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+    -webkit-flex-direction: row-reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse; }
+  .qazana-link .qazana-align-icon-right {
+    margin-left: 5px; }
+  .qazana-link .qazana-align-icon-left {
+    margin-right: 5px; }
 
 .qazana-icon-hover-reveal-yes .qazana-link {
   -webkit-transition: all 0.5s cubic-bezier(0.3, 0.95, 0.3, 0.95);
   transition: all 0.5s cubic-bezier(0.3, 0.95, 0.3, 0.95); }
-.qazana-icon-hover-reveal-yes .qazana-align-icon-right {
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: reverse;
-  -webkit-flex-direction: row-reverse;
-      -ms-flex-direction: row-reverse;
-          flex-direction: row-reverse; }
 .qazana-icon-hover-reveal-yes .qazana-link-icon {
   overflow: hidden;
   max-width: 0;
@@ -2326,7 +2340,7 @@ body.qazana-page .qazana-widget-menu-anchor {
 .is-mobile .qazana-tooltip {
   outline: 0; }
 
-@media screen and (min-width: 25rem) {
+@media (max-width: 767px) {
   .qazana-tooltip__content {
     font-size: -webkit-calc(1rem + (-2 * (100vw - 400px)/ 624));
     font-size: calc(1rem + (-2 * (100vw - 400px)/ 624)); } }
